--- a/resources/assets/main/sass/_app/_pages/_shop.scss
+++ b/resources/assets/main/sass/_app/_pages/_shop.scss
@@ -32,6 +32,7 @@ body.shop-landing{
       width: auto;
       font-size: 25px;
       color: #3d3d3d;
+      margin: 0 auto;
       .fill-with-red{
         color: #EC1B47;
         font-size: 25px;
@@ -48,7 +49,7 @@ body.shop-landing{
   ul.nav-tabs.nav{
     border: none;
     border-bottom: 1px solid #DDDDDC;
-    width: 560px;
+    width: 556px;
     margin: 0 auto;
     li{
       border: none;
@@ -132,6 +133,7 @@ body.shop-landing{
       color: #94489A;
       padding-left: 0;
       line-height: 42px;
+      margin: 0;
     }
     h1{
       font-family: montserratlight, sans-serif;
@@ -353,7 +355,7 @@ body.shop-landing{
 
   .bottom-newest-arrival{
     ul.nav-tabs.nav{
-      width: 315px;
+      width: 311px;
     }
   }
 
@@ -695,14 +697,15 @@ body.shop-landing{
             margin-left: 50%;
             transform: translate(-50%, 0);
             padding: 0;
-            padding-top: 9px;
+            padding-top: 5px;
+
             &::before{
               content: "";
               position: absolute;
               width: 115%;
               height: 2px;
               background: #000000;
-              top: 35px;
+              top: 32px;
               left: -3px;
               visibility: hidden;
               -webkit-transform: scaleX(0);
